# f1-service-system-v1

./: .env.example  .gitignore  README.md  pyproject.toml  run_ui.sh
.github/: copilot-instructions.md
docs/: ACCURACY_COMPARISON.md  ARCHITECTURE_COMPARISON.md  AUDIO_FEATURE.md  AUDIO_FIX.md  AVATAR_AND_UI_UPDATE.md  CENTERED_HERO_UPDATE.md  F1_LOGO_UPDATE.md  FIX_MAX_IMAGE_HTML.md  FONT_LOADING_FIX.md  FORMULA1_FONT_UPDATE.md  GPT5_AGENT_ARCHITECTURE.md  LARGER_AVATAR_FILTERED_SOURCES.md  LATENCY_COMPARISON.md  MAX_IMAGE_LARGE_NO_BORDER.md  MODEL_COMPARISON.md  MODEL_CONFIGURATION.md  OPENING_SONG_REMOVED.md  ORCHESTRATOR_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  REFACTORING_SUMMARY.md  STREAMLIT_FONTS_GUIDE.md  TOOL_BINDING_COMPARISON.md  UI_DOCUMENTATION.md  UI_IMPLEMENTATION_SUMMARY.md  UI_REVERT_MAX_WELCOME.md  UI_VISUAL_DESIGN.md
evaluation_datasets/: f1-kb-evaluation-bedrock.jsonl  f1-kb-evaluation-prompts-only.jsonl
scripts/: compare_agent_speed.py  evaluation_dataset_creation.py  run_app.sh  setup.sh  test_bedrock_retrieve_and_generate.py  test_bedrock_vs_gpt4o.py  test_gpt5_agent.py  test_latency_comparison.py  test_model_latency.py
src/: __init__.py
src/agents/: __init__.py  gpt5_agent.py  orchestrator.py
src/config/: __init__.py  (+1 more)
tests/: __init__.py  compare_agent_speed.py  debug_orchestrator.py  test_aws_credentials.py  test_bedrock_retrieve.py  test_chunk_tracing.py  test_circuit_retrieval.py  test_conversation_memory.py  test_langgraph.py  test_memory_simple.py  test_orchestrator.py  test_regulations_rag.py  test_tools.py
(+7 files in other folders)
