[tool.poetry]
name = "f1-service-system-v1"
version = "0.1.0"
description = "F1 information service system with LLM agents, RAG, and circuit visualization"
authors = ["Long Hoang <longhhoang1202@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
boto3 = "^1.28.0"
pinecone-client = "^2.0.0"
streamlit = "^1.28.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
tenacity = "^9.1.2"
langgraph = "^0.6.10"
langsmith = "^0.4.36"
langchain-core = "^0.3.79"
langchain-aws = "^0.2.35"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
